src-tauri/check.txt
    Checking emmm2 v0.1.0 (E:\Dev\EMMM2NEW\src-tauri)
warning: unused import: `ObjectSummary`
 --> src\commands\objects\object_cmds.rs:6:71
  |
6 |     CategoryCount, CreateObjectInput, GetObjectsResult, ObjectFilter, ObjectSummary, UpdateObjectInput,
  |                                                                       ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ObjectSummary`
 --> src\services\objects\query.rs:3:68
  |
3 | use crate::database::object_repo::{GetObjectsResult, ObjectFilter, ObjectSummary};
  |                                                                    ^^^^^^^^^^^^^

error[E0277]: the trait bound `std::option::Option<std::string::String>: AsRef<OsStr>` is not satisfied
    --> src\services\objects\mutate.rs:30:47
     |
  30 |         let target_dir = std::path::Path::new(&game.mod_path).join(&folder_path);
     |                          -------------------- ^^^^^^^^^^^^^^ the trait `AsRef<OsStr>` is not implemented for `std::option::Option<std::string::String>`
     |                          |
     |                          required by a bound introduced by this call
     |
note: required by a bound in `std::path::Path::new`
    --> C:\Users\yusri\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\std\src\path.rs:2369:25
     |
2369 |     pub const fn new<S: [const] AsRef<OsStr> + ?Sized>(s: &S) -> &Path {
     |                         ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Path::new`

For more information about this error, try `rustc --explain E0277`.
warning: `emmm2` (lib) generated 2 warnings
error: could not compile `emmm2` (lib) due to 1 previous error; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `emmm2` (lib test) generated 2 warnings (2 duplicates)
error: could not compile `emmm2` (lib test) due to 1 previous error; 2 warnings emitted
